Corrected spacing on index page

--- a/index.css
+++ b/index.css
@@ -85,24 +85,25 @@ p {
 
 .authors {
   display: flex; 
-  justify-content: center; 
-  flex-wrap: wrap; 
+  justify-content: space-between; 
+  align-items: center; 
+  padding: 0 10px;
 }
-
-
 
 
 .author {
   display: flex; 
   flex-direction: column; 
   align-items: center; 
-  margin: 10px; 
   color: white;
+  font-size: 1em
+  flex: 1;
+  margin: 0 10px;
 }
 
 .author img {
-  width: 100px; 
-  height: 100px; 
+  width: 80px; 
+  height: 80px; 
   border-radius: 50%;
   border: 2px solid #fff;
   background-color: #fff; 
@@ -112,4 +113,9 @@ p {
 
 .author div {
   text-align: center; 
+  max-width: 100px;
+}
+
+body {
+  padding-bottom: 0.5in;
 }
